# ChangeLog for media-libs/lv2
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*lv2-9999 (02 Feb 2013)

  02 Feb 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +lv2-9999.ebuild, +metadata.xml:
  Initial ebuild
